.metadata/.plugins/com.provar.eclipse.ui/00DM0000001eO1fMAE/objects/CRMfusionDBR101__Enabled_Object__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Protected</customSettingsVisibility>
    <description>List of objects enabled for DupeBlocker besides account, contact and lead.</description>
    <fields>
        <fullName>CRMfusionDBR101__Class_Name__c</fullName>
        <label>Unit Test Class Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Object_Name__c</fullName>
        <externalId>true</externalId>
        <label>Object Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>CRMfusionDBR101__Trigger_Name__c</fullName>
        <label>Trigger Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>DupeBlocker Enabled Objects</label>
</CustomObject>